# association-data

./: .gitignore  README.md  module_runner.py  setup.cfg  setup.py
association/: __init__.py
association/etl/: __init__.py  product.py  product_translation.py  store.py  store_translation.py  transactional_sales.py
association/etl/bootstrap/: product_translation.py
association/modelling/: __init__.py  fp_growth.py
association/result_delivery/: __init__.py  database.py  object_storage.py
association/utils/: __init__.py  io.py  log.py  transformation.py
dags/: association.py  association_bootstrap.py  association_utils.py  requirements.txt
notebooks/: experimentation.ipynb  experimentation_2.ipynb  experimentation_translation.ipynb  model_eval.ipynb  result_delivery.ipynb  store_based_modelling.ipynb
