[metadata]
name = association
version = 1.0.2
author = Burhan Bahçecioğlu
author_email = burhanbl@yahoo.com
summary = Association cli apps on top of pyspark and Databricks.
license = Proprietary
description_file =
    README.md
classifier =
    Development Status ::  - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: Proprietary
    Operating System :: Databricks Runtime Image
    Programming Language :: Python

[options]
packages = find:
setup_requires = setuptools
python_requires = >=3.8
install_requires =
    pyspark[sql]==3.4.1
    delta-spark==2.4.0
    typing
    typing_extensions
    libretranslatepy

[options.packages.find]
include = association*

[options.extras_require]
dev =
    pylint
    flake8
